--- a/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
+++ b/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
@@ -179,11 +179,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_list = ['Avicennia germinans', \n",
-    "             'Metopium brownei', \n",
-    "             'Handroanthus billbergii', \n",
-    "             'Bourreria succulenta', \n",
-    "             'Bursera karsteniana']"
+    "test_list = ['Avicennia germinans',\n",
+    " 'Metopium brownei',\n",
+    " 'Handroanthus billbergii',\n",
+    " 'Bourreria succulenta',\n",
+    " 'Bursera karsteniana',\n",
+    " 'Bursera simaruba',\n",
+    " 'Bursera tomentosa',\n",
+    " 'Cynophalla flexuosa',\n",
+    " 'Cynophalla hastata',\n",
+    " 'Quadrella odoratissima',\n",
+    " 'Crossopetalum rhacoma',\n",
+    " 'Maytenus versluysii',\n",
+    " 'Clusia rosea',\n",
+    " 'Conocarpus erectus',\n",
+    " 'Laguncularia racemosa']"
    ]
   },
   {
@@ -195,7 +205,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                        \r"
+      "7: Cynophalla flexuosa:  67%|██████▋   | 16/24 [00:14<00:00, 12.01it/s]"
      ]
     }
    ],
@@ -268,47 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Avicennia germinans'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "species"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'In contrast, trees in Texas and Louisiana were often less than one meter tall. The heartwood is dark-brown to black, while the sapwood is yellow-brown. The leaves often appear whitish from the salt excreted at night and on cloudy days. Leaves are simple and opposite and grow from 2 to 3 inches long. The leaf is oval and pointed, and the margins are entire. The leaves appear smooth, thick, and leathery with a dark green topside and grey to white underside. When the tree is young the bark is smooth and as it matures the bark takes on a thick and fissured texture. The flowers appear at the ends of the branches and are small, white, and fragrant with yellow centers. 9 Altmetric Avicennia germinans (Black Mangrove) is a medium-sized, evergreen shrub or tree with a rounded, densely foliated crown of spreading branches. It bears thick, elliptic, simple and opposite leaves, 2-3 in. long (5-7 cm). Smooth and leathery, they are dark green above and silver-white underneath. Blooming year-round, small white flowers with yellow centers appear in short branched spikes at the tips of the branches. The blossoms are followed by green, fleshy fruits which consist of large flattened capsules of seeds. The bark is dark gray and smooth in youth, becoming scaly on larger trunks. Tough and long-lasting, Conocarpus erectus... black mangrove Verbenaceae Avicennia germinans (L.) L. symbol: AVGE Leaf: Opposite, simple, evergreen, leathery, elliptical to obovate, 2 to 5 inches long, dark green above, silvery hairy below, may have salt deposits on their upper surfaces due to salt excretion. Flower: White, 4 petaled flowers, occurring in cone-shaped clusters, 1 to 2 inches long near branch tips. Fruit: Egg-shaped capsule 1 to 2 inches long, containing one lima bean-shaped seed. Twig: Stout, slightly angled, finely hairy, and initially green but turning grayish brown. Bark: Dark gray and finely scaly. Form: Bushy tree (50 feet tall) that forms dense thickets, trunk divides close to the ground, numerous finger like roots (pneumatophores) occur around the base of the tree. Avicennia germinans, the black mangrove,[3] is a shrub or small tree growing up to 12 meters (39 feet) in the acanthus family, Acanthaceae. Tree with lots of pneumatophores (breathing roots). Germinating seeds General InformationBlack mangrove is an evergreen shrub or small to medium-sized tree with a rounded crown of spreading branches; usually growing 3 - 12 metres tall but occasionally reaching 25 metres[299TitleProtabase - Plant Resources of Tropical Africa. The bole, which is often crooked, can be 30 - 60cm in diameter[418TitleEcocrop Properties Conservation StatusLeast Concern Edibility Rating Medicinal Rating Other Uses Rating HabitEvergreen Tree Height10.00 m Growth RateMedium PollinatorsBees, Ants Front. In contrast, the largest plants contained multiple stems and branches extending to almost 1 m from a central base (Figure 1). Front. Collapse All / Expand All Description Evergreen shrub or small tree 3–12(-25) m high; trunk 30–60 dm in diameter. Masses of small air roots 15–45 cm long sometimes hang from upper part of large trunks. Bark dark gray or brown and smooth on small trunks, becoming dark brown, fissured, scaly, and thick. Leaves opposite, lanceolate or narrowly elliptical, 5–11 cm long, 2–4 cm wide, acute or blunt at tip, entire, thick, leathery. Fine hairs giving a grayish hue to foliage; both surfaces often with scattered salt crystals and salty taste. Petiole 3–15 mm long. Spikes or panicles headlike, upright at and near ends of twigs. Flowers several, crowded, sessile, 6 mm long, 10 mm across. Calyx cup-shaped, deeply 5-lobed; corolla tubular, hairy, white but yellowish at base, with 4 slightly unequal spreading, rounded, or notched lobes, stamens 4, 5 mm long in notches of corolla tube near base; pistil with imperfectly 4-celled ovary, slender style, and 2-forked stigma. Capsule elliptical, flattened, 2.5–3 cm long, often splitting into 2 parts. Seed 1, large, flattened, often germinating on tree (Little, 1983). Harvesting Publ'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,47 +308,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Aril colour'"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trait"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['NA?', 'orange', 'red', 'white', 'yellow-geen']"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trait_options"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,39 +343,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In contrast, trees in Texas and Louisiana were often less than one meter tall. The heartwood is dark-brown to black, while the sapwood is yellow-brown. The leaves often appear whitish from the salt excreted at night and on cloudy days. Leaves are simple and opposite and grow from 2 to 3 inches long. The leaf is oval and pointed, and the margins are entire. The leaves appear smooth, thick, and leathery with a dark green topside and grey to white underside. When the tree is young the bark is smooth and as it matures the bark takes on a thick and fissured texture. The flowers appear at the ends of the branches and are small, white, and fragrant with yellow centers. 9 Altmetric Avicennia germinans (Black Mangrove) is a medium-sized, evergreen shrub or tree with a rounded, densely foliated crown of spreading branches. It bears thick, elliptic, simple and opposite leaves, 2-3 in. long (5-7 cm). Smooth and leathery, they are dark green above and silver-white underneath. Blooming year-round, small white flowers with yellow centers appear in short branched spikes at the tips of the branches. The blossoms are followed by green, fleshy fruits which consist of large flattened capsules of seeds. The bark is dark gray and smooth in youth, becoming scaly on larger trunks. Tough and long-lasting, Conocarpus erectus... black mangrove Verbenaceae Avicennia germinans (L.) L. symbol: AVGE Leaf: Opposite, simple, evergreen, leathery, elliptical to obovate, 2 to 5 inches long, dark green above, silvery hairy below, may have salt deposits on their upper surfaces due to salt excretion. Flower: White, 4 petaled flowers, occurring in cone-shaped clusters, 1 to 2 inches long near branch tips. Fruit: Egg-shaped capsule 1 to 2 inches long, containing one lima bean-shaped seed. Twig: Stout, slightly angled, finely hairy, and initially green but turning grayish brown. Bark: Dark gray and finely scaly. Form: Bushy tree (50 feet tall) that forms dense thickets, trunk divides close to the ground, numerous finger like roots (pneumatophores) occur around the base of the tree. Avicennia germinans, the black mangrove,[3] is a shrub or small tree growing up to 12 meters (39 feet) in the acanthus family, Acanthaceae. Tree with lots of pneumatophores (breathing roots). Germinating seeds General InformationBlack mangrove is an evergreen shrub or small to medium-sized tree with a rounded crown of spreading branches; usually growing 3 - 12 metres tall but occasionally reaching 25 metres[299TitleProtabase - Plant Resources of Tropical Africa. The bole, which is often crooked, can be 30 - 60cm in diameter[418TitleEcocrop Properties Conservation StatusLeast Concern Edibility Rating Medicinal Rating Other Uses Rating HabitEvergreen Tree Height10.00 m Growth RateMedium PollinatorsBees, Ants Front. In contrast, the largest plants contained multiple stems and branches extending to almost 1 m from a central base (Figure 1). Front. Collapse All / Expand All Description Evergreen shrub or small tree 3–12(-25) m high; trunk 30–60 dm in diameter. Masses of small air roots 15–45 cm long sometimes hang from upper part of large trunks. Bark dark gray or brown and smooth on small trunks, becoming dark brown, fissured, scaly, and thick. Leaves opposite, lanceolate or narrowly elliptical, 5–11 cm long, 2–4 cm wide, acute or blunt at tip, entire, thick, leathery. Fine hairs giving a grayish hue to foliage; both surfaces often with scattered salt crystals and salty taste. Petiole 3–15 mm long. Spikes or panicles headlike, upright at and near ends of twigs. Flowers several, crowded, sessile, 6 mm long, 10 mm across. Calyx cup-shaped, deeply 5-lobed; corolla tubular, hairy, white but yellowish at base, with 4 slightly unequal spreading, rounded, or notched lobes, stamens 4, 5 mm long in notches of corolla tube near base; pistil with imperfectly 4-celled ovary, slender style, and 2-forked stigma. Capsule elliptical, flattened, 2.5–3 cm long, often splitting into 2 parts. Seed 1, large, flattened, often germinating on tree (Little, 1983). Harvesting Publ\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "text:\n",
-      "In contrast, trees in Texas and Louisiana were often less than one meter tall. The heartwood is dark-brown to black, while the sapwood is yellow-brown. The leaves often appear whitish from the salt excreted at night and on cloudy days. Leaves are simple and opposite and grow from 2 to 3 inches long. The leaf is oval and pointed, and the margins are entire. The leaves appear smooth, thick, and leathery with a dark green topside and grey to white underside. When the tree is young the bark is smooth and as it matures the bark takes on a thick and fissured texture. The flowers appear at the ends of the branches and are small, white, and fragrant with yellow centers. 9 Altmetric Avicennia germinans (Black Mangrove) is a medium-sized, evergreen shrub or tree with a rounded, densely foliated crown of spreading branches. It bears thick, elliptic, simple and opposite leaves, 2-3 in. long (5-7 cm). Smooth and leathery, they are dark green above and silver-white underneath. Blooming year-round, small white flowers with yellow centers appear in short branched spikes at the tips of the branches. The blossoms are followed by green, fleshy fruits which consist of large flattened capsules of seeds. The bark is dark gray and smooth in youth, becoming scaly on larger trunks. Tough and long-lasting, Conocarpus erectus... black mangrove Verbenaceae Avicennia germinans (L.) L. symbol: AVGE Leaf: Opposite, simple, evergreen, leathery, elliptical to obovate, 2 to 5 inches long, dark green above, silvery hairy below, may have salt deposits on their upper surfaces due to salt excretion. Flower: White, 4 petaled flowers, occurring in cone-shaped clusters, 1 to 2 inches long near branch tips. Fruit: Egg-shaped capsule 1 to 2 inches long, containing one lima bean-shaped seed. Twig: Stout, slightly angled, finely hairy, and initially green but turning grayish brown. Bark: Dark gray and finely scaly. Form: Bushy tree (50 feet tall) that forms dense thickets, trunk divides close to the ground, numerous finger like roots (pneumatophores) occur around the base of the tree. Avicennia germinans, the black mangrove,[3] is a shrub or small tree growing up to 12 meters (39 feet) in the acanthus family, Acanthaceae. Tree with lots of pneumatophores (breathing roots). Germinating seeds General InformationBlack mangrove is an evergreen shrub or small to medium-sized tree with a rounded crown of spreading branches; usually growing 3 - 12 metres tall but occasionally reaching 25 metres[299TitleProtabase - Plant Resources of Tropical Africa. The bole, which is often crooked, can be 30 - 60cm in diameter[418TitleEcocrop Properties Conservation StatusLeast Concern Edibility Rating Medicinal Rating Other Uses Rating HabitEvergreen Tree Height10.00 m Growth RateMedium PollinatorsBees, Ants Front. In contrast, the largest plants contained multiple stems and branches extending to almost 1 m from a central base (Figure 1). Front. Collapse All / Expand All Description Evergreen shrub or small tree 3–12(-25) m high; trunk 30–60 dm in diameter. Masses of small air roots 15–45 cm long sometimes hang from upper part of large trunks. Bark dark gray or brown and smooth on small trunks, becoming dark brown, fissured, scaly, and thick. Leaves opposite, lanceolate or narrowly elliptical, 5–11 cm long, 2–4 cm wide, acute or blunt at tip, entire, thick, leathery. Fine hairs giving a grayish hue to foliage; both surfaces often with scattered salt crystals and salty taste. Petiole 3–15 mm long. Spikes or panicles headlike, upright at and near ends of twigs. Flowers several, crowded, sessile, 6 mm long, 10 mm across. Calyx cup-shaped, deeply 5-lobed; corolla tubular, hairy, white but yellowish at base, with 4 slightly unequal spreading, rounded, or notched lobes, stamens 4, 5 mm long in notches of corolla tube near base; pistil with imperfectly 4-celled ovary, slender style, and 2-forked stigma. Capsule elliptical, flattened, 2.5–3 cm long, often splitting into 2 parts. Seed 1, large, flattened, often germinating on tree (Little, 1983). Harvesting Publ\n",
-      "\n",
-      "Which of the following values correctly describe(s) the 'Aril colour' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur and 'NA' if there is no information that can be used to infer the occurrence of the trait. \n",
-      "The possible values for this trait are: ['NA?', 'orange', 'red', 'white', 'yellow-geen']. \n",
-      "Please ONLY return a Python list of tuples with ALL the options/value combinations from the list with options, like this: [('NA?', '0'), ('orange', '1')] or in case there is not information: [('NA?', 'NA'), ('orange', 'NA')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(F\"\"\"text:\n",
     "{text}\n",
@@ -419,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,40 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-6wYbIrdUPWFLMMxVP3o0iu3ck6MYH at 0x7fbe20d3cd10> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"content\": \"\\n\\n[('NA?', 'NA'), ('orange', 'NA'), ('red', '0'), ('white', 'NA'), ('yellow-green', 'NA')]\",\n",
-       "        \"role\": \"assistant\"\n",
-       "      }\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1679414048,\n",
-       "  \"id\": \"chatcmpl-6wYbIrdUPWFLMMxVP3o0iu3ck6MYH\",\n",
-       "  \"model\": \"gpt-3.5-turbo-0301\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"usage\": {\n",
-       "    \"completion_tokens\": 33,\n",
-       "    \"prompt_tokens\": 1185,\n",
-       "    \"total_tokens\": 1218\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "completion"
    ]
