--- a/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses.ipynb
+++ b/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses.ipynb
@@ -5818,7 +5818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -7084,32 +7084,6 @@
           "yref": "y"
          },
          {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "10.0%",
-          "x": 95,
-          "xref": "x",
-          "y": "Life form",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 100,
-          "xref": "x",
-          "y": "Life form",
-          "yref": "y"
-         },
-         {
           "align": "right",
           "font": {
            "color": "rgb(67, 67, 67)",
@@ -7300,32 +7274,6 @@
           "yref": "y"
          },
          {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 40,
-          "xref": "x",
-          "y": "Leaf margin",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "60.0%",
-          "x": 70,
-          "xref": "x",
-          "y": "Leaf margin",
-          "yref": "y"
-         },
-         {
           "align": "right",
           "font": {
            "color": "rgb(67, 67, 67)",
@@ -7403,32 +7351,6 @@
           "showarrow": false,
           "text": "20.0%",
           "x": 10,
-          "xref": "x",
-          "y": "Leaf lower side",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 20,
-          "xref": "x",
-          "y": "Leaf lower side",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "80.0%",
-          "x": 60,
           "xref": "x",
           "y": "Leaf lower side",
           "yref": "y"
@@ -7516,32 +7438,6 @@
           "yref": "y"
          },
          {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 20,
-          "xref": "x",
-          "y": "Leaf rachis",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "80.0%",
-          "x": 60,
-          "xref": "x",
-          "y": "Leaf rachis",
-          "yref": "y"
-         },
-         {
           "align": "right",
           "font": {
            "color": "rgb(67, 67, 67)",
@@ -7570,32 +7466,6 @@
           "yref": "y"
          },
          {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 20,
-          "xref": "x",
-          "y": "Thorns spines",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "80.0%",
-          "x": 60,
-          "xref": "x",
-          "y": "Thorns spines",
-          "yref": "y"
-         },
-         {
           "align": "right",
           "font": {
            "color": "rgb(67, 67, 67)",
@@ -7619,32 +7489,6 @@
           "showarrow": false,
           "text": "20.0%",
           "x": 10,
-          "xref": "x",
-          "y": "Stipules",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 20,
-          "xref": "x",
-          "y": "Stipules",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "80.0%",
-          "x": 60,
           "xref": "x",
           "y": "Stipules",
           "yref": "y"
@@ -8002,32 +7846,6 @@
           "yref": "y"
          },
          {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 20,
-          "xref": "x",
-          "y": "Stamen shape",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "80.0%",
-          "x": 60,
-          "xref": "x",
-          "y": "Stamen shape",
-          "yref": "y"
-         },
-         {
           "align": "right",
           "font": {
            "color": "rgb(67, 67, 67)",
@@ -8056,32 +7874,6 @@
           "yref": "y"
          },
          {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 0,
-          "xref": "x",
-          "y": "Stamen number",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "100.0%",
-          "x": 50,
-          "xref": "x",
-          "y": "Stamen number",
-          "yref": "y"
-         },
-         {
           "align": "right",
           "font": {
            "color": "rgb(67, 67, 67)",
@@ -8105,32 +7897,6 @@
           "showarrow": false,
           "text": "60.0%",
           "x": 30,
-          "xref": "x",
-          "y": "Fruit type",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 60,
-          "xref": "x",
-          "y": "Fruit type",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "40.0%",
-          "x": 80,
           "xref": "x",
           "y": "Fruit type",
           "yref": "y"
@@ -8267,32 +8033,6 @@
           "showarrow": false,
           "text": "0.0%",
           "x": 0,
-          "xref": "x",
-          "y": "Aril colour",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "0.0%",
-          "x": 0,
-          "xref": "x",
-          "y": "Aril colour",
-          "yref": "y"
-         },
-         {
-          "font": {
-           "color": "rgb(248, 248, 255)",
-           "family": "Arial",
-           "size": 14
-          },
-          "showarrow": false,
-          "text": "100.0%",
-          "x": 50,
           "xref": "x",
           "y": "Aril colour",
           "yref": "y"
@@ -9320,6 +9060,8 @@
     "                                          color='rgb(67, 67, 67)'),\n",
     "                                showarrow=False))\n",
     "    space = xd[0]\n",
+    "    if 0 in xd:\n",
+    "         continue\n",
     "    for i in range(1, len(xd)):\n",
     "            # labeling the rest of percentages for each bar (x_axis)\n",
     "            annotations.append(dict(xref='x', yref='y',\n",
